@@ -65,7 +65,8 @@ namespace Mono.Addins.Setup
 					UpdateRepository (monitor, url);
 					rr = FindRepositoryRecord (url);
 					Repository rep = rr.GetCachedRepository ();
-					rr.Name = rep.Name;
+					if (rep != null)
+						rr.Name = rep.Name;
 				}
 				service.SaveConfiguration ();
 				return rr;
@@ -175,12 +176,12 @@ namespace Mono.Addins.Setup
 		}
 			                     
 		
-		public void UpdateAllRepositories (IProgressStatus monitor)
+		public bool UpdateAllRepositories (IProgressStatus monitor)
 		{
-			UpdateRepository (monitor, (string)null);
+			return UpdateRepository (monitor, (string)null);
 		}
 		
-		public void UpdateRepository (IProgressStatus statusMonitor, string url)
+		public bool UpdateRepository (IProgressStatus statusMonitor, string url)
 		{
 			repoList = null;
 			
@@ -195,22 +196,32 @@ namespace Mono.Addins.Setup
 						UpdateRepository (monitor, new Uri (rr.Url), rr);
 					monitor.Step (1);
 				}
+			} catch (Exception ex) {
+				statusMonitor.ReportError ("Could not get information from repository", ex);
+				return false;
 			} finally {
 				monitor.EndTask ();
 			}
 			service.SaveConfiguration ();
+			return true;
 		}
 
-		void UpdateRepository (IProgressMonitor monitor, Uri baseUri, RepositoryRecord rr)
+		bool UpdateRepository (IProgressMonitor monitor, Uri baseUri, RepositoryRecord rr)
 		{
 			Uri absUri = new Uri (baseUri, rr.Url);
 			monitor.BeginTask ("Updating from " + absUri.ToString (), 2);
-			Repository newRep;
+			Repository newRep = null;
+			Exception error = null;
+			
 			try {
 				newRep = (Repository) service.Store.DownloadObject (monitor, absUri.ToString (), typeof(Repository));
 			} catch (Exception ex) {
-				monitor.ReportError ("Could not get information from repository" + ": " + absUri.ToString (), ex);
-				return;
+				error = ex;
+			}
+			
+			if (newRep == null) {
+				monitor.ReportError ("Could not get information from repository" + ": " + absUri.ToString (), error);
+				return false;
 			}
 			
 			monitor.Step (1);
@@ -227,6 +238,7 @@ namespace Mono.Addins.Setup
 			}
 			monitor.EndTask ();
 			rr.UpdateCachedRepository (newRep);
+			return true;
 		}
 		
 		public AddinRepositoryEntry[] GetAvailableUpdates ()
